web/book/tests/examples/snapshots/examples__book__transforms__select__excluding-columns__0.snap
---
source: web/book/tests/examples/book.rs
expression: "prql target:sql.bigquery\nfrom tracks\nselect !{milliseconds,bytes}\n"
---
SELECT
  *
EXCEPT
  (milliseconds, bytes)
FROM
  tracks

