web/book/tests/examples/snapshots/examples__book__transforms__select__excluding-columns__2.snap
---
source: web/book/tests/examples/book.rs
expression: "from artists\nderive nick = name\nselect !{artists.*}\n"
---
SELECT
  name AS nick
FROM
  artists

